# open-context7-backend

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  index.yaml  open-context7-backend-0.1.0.tgz  pyproject.toml
.github/workflows/: release-helm-chart.yml
app/: AGENTS.md  auth.py  catalog.py  cli.py  embeddings.py  formatters.py  main.py  models.py  rerank.py  routes.py  settings.py  store.py
app/ingest/: ids.py  models.py  parser.py  repository.py
app/retrieval/: lexical.py  qdrant.py
charts/open-context7-backend/: .helmignore  AGENTS.md  Chart.yaml  README.md  values.yaml
charts/open-context7-backend/templates/: _helpers.tpl  deployment.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
charts/open-context7-backend/templates/tests/: test-connection.yaml
docs/: AGENTS.md  api.md  architecture.md  auth.md  catalog.md  configuration.md  deployment.md  development.md  ingestion.md  retrieval.md  testing.md  troubleshooting.md
examples/platform-docs/: guide.mdx
libraries/: AGENTS.md  example.yaml  internal-platform.yaml
plans/: context7-backend-reverse-engineer.md
scripts/: AGENTS.md  qa_full.sh  qa_http_contract.sh  qa_mcp_contract.mjs  qa_mcp_contract.sh  qa_qdrant_contract.sh  vendor_manifest.sh  verify_code_quality.sh  verify_plan_compliance.sh  verify_scope_fidelity.sh
tests/: AGENTS.md  test_api_context.py  test_api_search.py  test_catalog.py  test_deployment_compose.py  test_docs_contract.py  test_embeddings_rerank.py  test_format_json.py  test_format_text.py  test_ingest_cli.py  test_ingest_repository.py  test_local_e2e.py  test_models.py  test_parser.py  test_qdrant_adapter.py  test_retrieval_lexical.py  test_scaffold.py  test_settings_auth.py
tests/fixtures/: chunks.json
tests/fixtures/catalog/: invalid-id.yaml  valid-platform.yaml
tests/fixtures/catalog/docs/platform/docs/: index.md
tests/fixtures/docs/: guide.mdx
