[project]
name = "open-context7-backend"
version = "0.1.0"
description = "Air-gapped Context7-compatible documentation backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx2>=0.28.0",
    "orjson>=3.10.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.2",
    "qdrant-client>=1.12.0",
    "typer>=0.15.0",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
context7-backend = "app.cli:main"

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "basedpyright>=1.21.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.basedpyright]
typeCheckingMode = "all"
pythonVersion = "3.12"
pythonPlatform = "All"
include = ["app", "tests"]
exclude = ["**/__pycache__", "**/.venv", "**/build", "**/dist", "src/context7--upstash-context7-mcp-3.2.1"]
reportUnusedCallResult = "warning"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnusedVariable = "error"
reportMissingParameterType = "error"
reportPrivateUsage = "error"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]
exclude = ["src/context7--upstash-context7-mcp-3.2.1"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "D",
    "D203",
    "D213",
    "FBT001",
    "FBT002",
    "ISC001",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "PLR0913", "PLR2004", "S101", "S603", "SLF001"]
"app/cli.py" = ["T201"]
"app/catalog.py" = ["T201"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "typer.Argument",
    "typer.Option",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-config", "--strict-markers"]
filterwarnings = ["error"]
asyncio_mode = "auto"
pythonpath = ["."]
